# cnsl-eeprom-lib

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: eeplib.h
src/: eeplib.c  main_test.c
